# Quiz-platform

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
frontend/web/: README.md
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infra/docker/: backend.Dockerfile  streamlit.Dockerfile  web.Dockerfile  worker.Dockerfile
resource/: iterations.md  steps.md
src/quiz_platform/: __init__.py
src/quiz_platform/backend/: main.py
src/quiz_platform/streamlit_app/: __init__.py  app.py
